# swagger.yaml
@@ -703,6 +703,30 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/FindAllProfileResponseDto"
+  /profile/find-by-tags:
+    get:
+      operationId: "ProfileController_findByTag"
+      parameters:
+        - name: "tags"
+          required: true
+          in: "query"
+          schema:
+            type: "array"
+            items:
+              type: "string"
+      responses:
+        200:
+          description: "Perfiles obtenidos"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FindByTagsProfileResponseDto"
+        404:
+          description: "Perfil no encontrado"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
   /profile/{id}:
     get:
       operationId: "ProfileController_findById"
@@ -2712,6 +2736,131 @@ components:
                           type: "boolean"
                       required:
                         - "color"
+                        - "isExclusive"
+                  required:
+                    - "id"
+                    - "name"
+                    - "groupId"
+                    - "type"
+                    - "created_at"
+                    - "updated_at"
+                    - "group"
+            required:
+              - "id"
+              - "shortId"
+              - "phoneNumber"
+              - "secondaryPhoneNumber"
+              - "fullName"
+              - "firstName"
+              - "gender"
+              - "birthDate"
+              - "profilePictureUrl"
+              - "instagram"
+              - "mail"
+              - "dni"
+              - "alternativeNames"
+              - "birthLocationId"
+              - "residenceLocationId"
+              - "isInTrash"
+              - "movedToTrashDate"
+              - "created_at"
+              - "updated_at"
+              - "tags"
+      required:
+        - "profiles"
+    FindByTagsProfileResponseDto:
+      type: "object"
+      properties:
+        profiles:
+          type: "array"
+          items:
+            type: "object"
+            properties:
+              id:
+                type: "string"
+                format: "uuid"
+              shortId:
+                type: "number"
+              phoneNumber:
+                type: "string"
+                minLength: 1
+              secondaryPhoneNumber:
+                type: "null"
+              fullName:
+                type: "string"
+                minLength: 1
+              firstName:
+                type: "null"
+                minLength: 1
+              gender:
+                type: "null"
+              birthDate:
+                type: "null"
+                format: "date-time"
+              profilePictureUrl:
+                type: "null"
+                format: "uri"
+              instagram:
+                type: "null"
+              mail:
+                type: "null"
+                format: "email"
+              dni:
+                type: "null"
+              alternativeNames:
+                type: "null"
+                items:
+                  type: "string"
+              birthLocationId:
+                type: "null"
+                format: "uuid"
+              residenceLocationId:
+                type: "null"
+                format: "uuid"
+              isInTrash:
+                type: "boolean"
+              movedToTrashDate:
+                type: "null"
+                format: "date-time"
+              created_at:
+                type: "string"
+                format: "date-time"
+              updated_at:
+                type: "string"
+                format: "date-time"
+              tags:
+                type: "array"
+                items:
+                  type: "object"
+                  properties:
+                    id:
+                      type: "string"
+                      format: "uuid"
+                    name:
+                      type: "string"
+                      minLength: 1
+                    groupId:
+                      type: "string"
+                      format: "uuid"
+                    type:
+                      type: "string"
+                      enum:
+                        - "PROFILE"
+                        - "EVENT"
+                        - "PARTICIPANT"
+                        - "NOT_IN_SYSTEM"
+                    created_at:
+                      type: "string"
+                      format: "date-time"
+                    updated_at:
+                      type: "string"
+                      format: "date-time"
+                    group:
+                      type: "object"
+                      properties:
+                        isExclusive:
+                          type: "boolean"
+                      required:
                         - "isExclusive"
                   required:
                     - "id"
